fixed image on mobile devices? #9

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,25 +58,31 @@ h2 {
 }
 
 #photo {
-	width: 75% !important;
-	display: block !important;
+	width: 50% !important;
 	margin: auto !important;
-	margin: 16px !important;
 }
 
-@media (min-width: 550px) {
+#landing-main {
+	display: flex;
+}
 
-	#photo {
-		max-width: 25%;
-		position: absolute;
-		left: 83.5%;
-		top: 50%;
-		transform: translate(-50%, -50%);
-	}
+
+
+@media (min-width: 550px) {
 
 	#landing-main {
 		position: relative;
 	}
+
+	#photo {
+		max-width: 25%;
+		position: absolute;
+		left: 87.5%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+
 
 }
 
